Fix component visibility issue in the toolbar

--- a/src/main/resources/theme/generic/nav/_toolbar.scss
+++ b/src/main/resources/theme/generic/nav/_toolbar.scss
@@ -8,6 +8,9 @@
     display: inline-block;
     margin-right: 4px;
   }
+  [hidden] {
+    display: none;
+  }
 }
 
 @mixin toolbar($is-light) {
